# anyonecan

./: .cursorrules  .gitignore  .prettierrc  .windsurfrules  AGENTS.md  CLAUDE.md  FRAMEWORK-CHANGELOG.md  HARNESS-CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  setup.ps1  setup.sh  tsconfig.json  upgrade.ps1  upgrade.py  upgrade.sh  vitest.config.ts
.claude/: settings.json
.claude/commands/: adr.md  commit.md  coordinate.md  coverage.md  done.md  fix.md  review.md  start.md  test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.workspace/: STATUS.md  worklog.md
.workspace/plans/: 2026-07-13-harness-upgrade-p1-p5.md  2026-07-14-apply-harness-1.2.0-to-eacc-mcp.md  2026-07-14-harness-1.3.0-customization-safety.md  2026-07-22-multi-agent-coordination.md  2026-07-23-team-roles-and-project-mode.md  README.md
docs/adr/: 001-typescript-strict-mode.md  002-eslint-prettier-toolchain.md  (+1 more)
harness-core/: .cursorrules  .editorconfig  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  HARNESS-CHANGELOG.md  harness-manifest.json
language-packs/python/: .gitignore  pack.json  pyproject.toml
language-packs/python/.claude/: settings.json
language-packs/python/.github/workflows/: ci.yml
language-packs/python/scripts/: lint-format-hook.sh  validate.ps1  validate.sh
language-packs/python/src/domain/: user.py
language-packs/python/tests/arch/: test_dependencies.py  test_project_rules.py
language-packs/python/tests/domain/: test_user.py
scripts/: check-sync.mjs  lint-format-hook.mjs  validate-template.sh  validate.sh
(+76 files in other folders)
